# CPP-Basics

./: .gitignore  CMakeLists.txt  Main.cpp  class.h  file.txt  makefile  test  test1  vijay  vijay12
Basics/: CMakeLists.txt  Math.cpp  massif.out.40638  namespaces.cpp  operatorOverloading.cpp  operatorOverloading.h  test
Basics/Advanced/: Coroutines.cpp
Basics/Algorithms/: Bisection.cpp
Basics/ArrayAndPointers/: Array  Array.cpp  FunctionPointer.cpp  Pointers.cpp  UniquePointer.cpp  dynamicPointers.cpp  staticTwoDimensionalArrays.cpp
Basics/Basics/: Enum.cpp  EnumClass.cpp  Macro.cpp  PairTest.cpp  Variant.cpp  if.cpp  operatorOverloading.cpp  test
Basics/Basics/Advanced/: Coroutines.cpp
Basics/Basics/Algorithms/: Bisection.cpp
Basics/Basics/ArrayAndPointers/: printArray.h
Basics/Basics/Class/: InheritanceAndPolymorphism.cpp  (+3 more)
Basics/Class/: class.cpp  class.h  template.cpp
Basics/Common/: Map.h  Matrix.h  String.h  Timer.h  Vector.h  common.h
Basics/CurveFitting/: CurveFitting.cpp
Basics/FileOperations/: example.txt  fileWriteAndRead.cpp  readingFile.cpp  writingFile.cpp
Basics/Leetcode/: IntToRoman.cpp  LongestCommonPrefix.cpp  LongestPalindromeSubString.cpp  MaxArea.cpp  MedianTwoArrays.cpp  RomanToInt.cpp  Threesum.cpp
Basics/Railway/: CMakeLists.txt  Main.cpp  TicketManager.cpp  TicketManager.h  UserInterface.cpp  UserInterface.h  UserManagement.cpp
Basics/Recursion/: counter.cpp
Basics/STL/: Vector.h  map.cpp  vector.cpp
Basics/dynamicMemory/: customizedNew.cpp  newOperator.cpp
Basics/typeQualifiers/: extern.cpp  extern1.cpp
(+39 files in other folders)
