include_directories(Common)
# add_subdirectory(Railway)


add_executable(LeetcodeIntToRoman Leetcode/IntToRoman.cpp)
add_executable(LeetcodeRomanToInt Leetcode/RomanToInt.cpp)
add_executable(LeetcodeLongestCommonPrefix Leetcode/LongestCommonPrefix.cpp)
add_executable(LeetcodeThreeSum Leetcode/Threesum.cpp)


